--- a/Store/Components/Pages/Products.razor
+++ b/Store/Components/Pages/Products.razor
@@ -15,6 +15,9 @@
 {
     <p><em>Loading...</em></p>
 }
+else if (products.Count == 0) {
+    <p><em>There is a problem loading our products. Please try again later.</em></p>
+}
 else
 {
     <table class="table">
