--- a/Store/Components/Pages/Products.razor
+++ b/Store/Components/Pages/Products.razor
@@ -33,7 +33,7 @@ else
             @foreach (var product in products)
             {
                 <tr>
-                    <td><img height="80" width="80" src="@imagePrefix/images/@product.ImageUrl" /></td>
+                    <td><img height="80" width="80" src="@imagePrefix/@product.ImageUrl" /></td>
                     <td>@product.Name</td>
                     <td>@product.Description</td>
                     <td>@product.Price</td>
